# Notebook_CRUD

./: CMakeLists.txt  EditableText.qml  ExampleDataset.qml  GridExample.qml  ListExample.qml  contactsmodel.cpp  contactsmodel.h  main.cpp  main.qml  qml.qrc
